--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,3 @@
 
 
-
-<% if current_user %>
- Login Count: <%= current_user.sign_in_count %><br>
- Current Sign In Tme: <%= current_user.current_sign_in_at %><br>
- Last Sign In Time: <%= current_user.last_sign_in_at %><br>
- Current Sign In Ip: <%= current_user.current_sign_in_ip %><br>
- Last Sign In Ip: <%= current_user.last_sign_in_ip %>
-<% end %>
+<h1>Welcome</h1>
