--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,31 +10,43 @@
   </head>
 
   <body>
-<nav class="navbar navbar-expand-sm bg-light justify-content-center">
-  <ul class="navbar-nav">
-    <li class="nav-item marg" >
-      <%= link_to 'Home',root_path %>
-    </li>
-    <% if current_user %>
-      <li class="nav-item marg">
-        <%= link_to 'Edit',edit_user_registration_path %>
-      </li>
-      <li class="nav-item marg">
-       <%= link_to 'Sign Out',destroy_user_session_path, method: :delete %>
-      </li>
-      <li class="nav-item marg">
-        <%= link_to 'Delete My Account',registration_path(current_user), data: { confirm: "Are you sure? Your Account will be deleted completely!" }, method: :delete %>
-      </li>
-    <% else %>
-      <li class="nav-item marg">
-        <%= link_to 'Register',new_user_registration_path %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Sign In',new_user_session_path %>
-      </li>
-    <% end %>
-  </ul>
-</nav>    
+    <nav class="navbar navbar-expand-sm bg-light justify-content-center">
+      <ul class="navbar-nav">
+        <li class="nav-item marg" >
+          <%= link_to 'Home',root_path %>
+        </li>
+
+        <% if current_user %>
+
+          <li class="nav-item marg">
+            <%= link_to 'Edit',edit_user_registration_path %>
+          </li>
+          <li class="nav-item marg">
+            <%= link_to 'Sign Out',destroy_user_session_path, method: :delete %>
+          </li>
+          <li class="nav-item marg">
+            <%= link_to 'Delete My Account',registration_path(current_user), data: { confirm: "Are you sure? Your Account will be deleted completely!" }, method: :delete %>
+          </li>
+
+        <% else %>
+
+          <li class="nav-item marg">
+            <%= link_to 'Register',new_user_registration_path %>
+          </li>
+          <li class="nav-item marg">
+            <%= link_to 'Sign In',new_user_session_path %>
+          </li>
+
+        <% end %>
+
+        <li class="nav-item marg" >
+          <%= link_to 'Projects',projects_path %>
+        </li>
+        <li class="nav-item marg" >
+          <%= link_to 'Tasks',tasks_path %>
+        </li>
+      </ul>
+    </nav>    
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
