--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,16 +3,16 @@
   <%= devise_error_messages! %>
 
   <div class="form-group row field">
-    <%= f.label :name, class: "col-sm-2 col-form-label col-form-label-lg" %><br />
+    <%= f.label :name, class: "col-sm-2 col-form-label col-form-label-sm" %><br />
     <div class="col-sm-10">
-      <%= f.text_field :name, autocomplete: "new-password", class: "form-control form-control-lg" %>
+      <%= f.text_field :name, autofocus: true, autocomplete: "new-password", class: "form-control form-control-sm" %>
     </div>
   </div>
 
   <div class="form-group row field">
     <%= f.label :email, class: "col-sm-2 col-form-label col-form-label-sm"%><br />
     <div class="col-sm-10">
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control form-control-sm" %>
+      <%= f.email_field :email, autocomplete: "email", class: "form-control form-control-sm" %>
     </div>
   </div>
   <div class="form-group row field">
