--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+
     <nav class="navbar navbar-expand-sm bg-light justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item marg" >
@@ -19,7 +20,7 @@
         <% if current_user %>
 
           <li class="nav-item marg">
-            <%= link_to 'Edit',edit_user_registration_path %>
+            <%= link_to 'Edit Profile',edit_user_registration_path %>
           </li>
           <li class="nav-item marg">
             <%= link_to 'Sign Out',destroy_user_session_path, method: :delete %>
@@ -45,10 +46,14 @@
         <li class="nav-item marg" >
           <%= link_to 'Tasks',tasks_path %>
         </li>
+        <li class="nav-item marg" >
+          <%= link_to 'Attachments',attachments_path %>
+        </li>
       </ul>
     </nav>    
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <%= yield %>
+        <%= yield %>
+    
   </body>
 </html>
