--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
   <div class="form-group row field">
     <%= f.label :name, class: "col-sm-2 col-form-label col-form-label-sm" %><br />
     <div class="col-sm-10">
-      <%= f.text_field :name, autofocus: true, autocomplete: "new-password", class: "form-control form-control-sm" %>
+      <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control form-control-sm" %>
     </div>
   </div>
 
