--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,44 +11,47 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-sm bg-light justify-content-center">
+    <nav class="navbar navbar-expand-sm bg-dark justify-content-left">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Project Management System</a>
+      </div>
       <ul class="navbar-nav">
         <li class="nav-item marg" >
-          <%= link_to 'Home',root_path %>
+          <%= link_to 'Home',root_path, class: "text-white" %>
+        </li>
+        <li class="nav-item marg" >
+          <%= link_to 'Organisations',organizations_path, class: "text-white" %>
+        </li>
+        <li class="nav-item marg" >
+          <%= link_to 'Projects',projects_path, class: "text-white" %>
+        </li>
+        <li class="nav-item marg" >
+          <%= link_to 'Tasks',tasks_path, class: "text-white" %>
+        </li>
+        <li class="nav-item marg" >
+          <%= link_to 'Attachments',attachments_path, class: "text-white" %>
         </li>
 
         <% if current_user %>
 
           <li class="nav-item marg">
-            <%= link_to 'Edit Profile',edit_user_registration_path %>
+            <%= link_to 'Edit Profile',edit_user_registration_path, class: "text-white" %>
           </li>
           <li class="nav-item marg">
             <%= link_to 'Sign Out',destroy_user_session_path, method: :delete %>
           </li>
-          <li class="nav-item marg">
-            <%= link_to 'Delete My Account',registration_path(current_user), data: { confirm: "Are you sure? Your Account will be deleted completely!" }, method: :delete %>
-          </li>
-
+          
         <% else %>
 
           <li class="nav-item marg">
-            <%= link_to 'Register',new_user_registration_path %>
+            <%= link_to 'Register',new_user_registration_path, class: "text-white" %>
           </li>
           <li class="nav-item marg">
-            <%= link_to 'Sign In',new_user_session_path %>
+            <%= link_to 'Sign In',new_user_session_path, class: "text-white" %>
           </li>
 
         <% end %>
-
-        <li class="nav-item marg" >
-          <%= link_to 'Projects',projects_path %>
-        </li>
-        <li class="nav-item marg" >
-          <%= link_to 'Tasks',tasks_path %>
-        </li>
-        <li class="nav-item marg" >
-          <%= link_to 'Attachments',attachments_path %>
-        </li>
+        
       </ul>
     </nav>    
     <p class="notice"><%= notice %></p>
