--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,9 +12,7 @@
 
   <tbody>
     <% @projects.each do |project| %>
-      <% if project.user_id == current_user.id %>
-        <% @tasks.each do |task| %>
-          <% if task.project_id == project.id %>
+        <% project.tasks.each do |task| %>
             <tr>
               <td><%= task.task_title %></td>
               <td><%= task.task_description %></td>
@@ -22,8 +20,6 @@
               <td><%= link_to 'Edit', edit_task_path(task) %></td>
               <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
             </tr>
-          <% end %>
-        <% end %>
       <% end %>
     <% end %>
 
