--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,53 +3,37 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
+  <div class="form-group row">
+    <%= f.label :email, class: "col-sm-2" %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "col-sm-4" %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="form-group row">
+    <%= f.label :password, class: "col-sm-2" %>
+    <%= f.password_field :password, autocomplete: "new-password", class: "col-sm-4", placeholder: "leave blank if you don't want to change it" %>
     <% if @minimum_password_length %>
       <br />
       <em><%= @minimum_password_length %> characters minimum</em>
     <% end %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="form-group row">
+    <%= f.label :password_confirmation, class: "col-sm-2" %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "col-sm-4" %>
   </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+  <div class="form-group row">
+    <%= f.label :current_password, class: "col-sm-2" %>
+    <%= f.password_field :current_password, autocomplete: "current-password", class: "col-sm-4", placeholder: "we need your current password to confirm your changes" %>
   </div>
 
-  <div class="field">
-    <%= f.label :phone %><br />
-    <%= f.text_field :phone %>
+  <div class="actions form-group">
+    <%= f.submit "Update", class: "col-sm-1" %>
   </div>
-
-  <div class="field">
-    <%= f.label :organization %>
-    <%= collection_select(:organizations, :id, Organization.all, :id, :name, {:multiple => true}) %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-  
 <% end %>
 
 <h3>Cancel my account</h3>
