--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,52 +1,50 @@
-<h2>Register Here</h2>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div class="form-group row field">
-    <%= f.label :name, class: "col-sm-2 col-form-label col-form-label-sm" %><br />
-    <div class="col-sm-10">
-      <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control form-control-sm" %>
+<body class="bdy">
+
+  <div class="signup-form">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
+
+      <h2>Register</h2>
+      <p class="hint-text">Create your account. It's only takes a minute.</p>
+      <div class="form-group">
+        <%= f.text_field :name, autofocus: true, autocomplete: "off", class: "form-control", placeholder: "Name" %>   
+      </div>
+        
+      <div class="form-group">
+        <%= f.email_field :email, autocomplete: "off", class: "form-control", placeholder: "Email" %>
+      </div>
+
+      <div class="form-group">
+        <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder: "Password" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder: "Retype Password" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.text_field :phone, autocomplete: "off", class: "form-control", placeholder: "Phone Number" %>
+      </div> 
+
+      <div class="form-group">
+        <%= collection_select(:organizations, :id, Organization.all, :id, :name, {:prompt => "Select Organisation"}) %>
+
+      </div>                
+        
+      <div class="form-group actions">
+        <%= f.submit "Register Now", class: "btn btn-success btn-lg btn-block"%>
+      </div>
+
+    <% end %>
+    <div class="text-center">Already have an account? 
+      <%- if controller_name != 'sessions' %>
+        <%= link_to "Sign in", new_session_path(resource_name) %>
+      <% end -%>
     </div>
   </div>
-
-  <div class="form-group row field">
-    <%= f.label :email, class: "col-sm-2 col-form-label col-form-label-sm"%><br />
-    <div class="col-sm-10">
-      <%= f.email_field :email, autocomplete: "email", class: "form-control form-control-sm" %>
-    </div>
-  </div>
-  <div class="form-group row field">
-    <%= f.label :password, class: "col-sm-2 col-form-label" %>
-    <div class="col-sm-10">
-       <% if @minimum_password_length %>
-       <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
-    </div>
-  </div>
-
-  <div class="form-group row field">
-    <%= f.label :password_confirmation, class: "col-sm-2 col-form-label col-form-label-lg" %><br />
-    <div class="col-sm-10">
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-control-lg" %>
-    </div>
-  </div>
-
-  <div class="form-group row field">
-    <%= f.label :phone, class: "col-sm-2 col-form-label col-form-label-lg" %><br />
-    <div class="col-sm-10">
-      <%= f.text_field :phone, autocomplete: "new-password", class: "form-control form-control-lg" %>
-    </div>
-  </div>
-
-  <div class="field">
-    <%= f.label :organization %>
-    <%= collection_select(:organizations, :id, Organization.all, :id, :name, {:multiple => true}) %>
-  </div>
-  
-  <div class="form-group row actions">
-    <%= f.submit " Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</body>
+                           
