--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,52 +11,58 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-sm bg-dark justify-content-left">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">Project Management System</a>
-      </div>
-      <ul class="navbar-nav">
-        <li class="nav-item marg" >
-          <%= link_to 'Home',root_path, class: "text-white" %>
-        </li>
-        <li class="nav-item marg" >
-          <%= link_to 'Organisations',organizations_path, class: "text-white" %>
-        </li>
-        <li class="nav-item marg" >
-          <%= link_to 'Projects',projects_path, class: "text-white" %>
-        </li>
-        <li class="nav-item marg" >
-          <%= link_to 'Tasks',tasks_path, class: "text-white" %>
-        </li>
-        <li class="nav-item marg" >
-          <%= link_to 'Attachments',attachments_path, class: "text-white" %>
-        </li>
-
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#" style="color: blue;">Project Management System</a>
+      
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <%= link_to 'Home',root_path, class: "nav-link text-white" %>
+          </li>
+          <% if current_admin %>
+            <li class="nav-item">
+              <%= link_to 'Organisations',organizations_path, class: "nav-link text-white" %>
+            </li>
+          <% end -%>
+          <% if current_user %>
+            <li class="nav-item">
+              <%= link_to 'Projects',projects_path, class: "nav-link text-white" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Tasks',tasks_path, class: "nav-link text-white" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Attachments',attachments_path, class: "nav-link text-white" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Edit Profile',edit_user_registration_path, class: "nav-link text-white" %>
+            </li>
+          <% end %>
+        </ul>
         <% if current_user %>
-
-          <li class="nav-item marg">
-            <%= link_to 'Edit Profile',edit_user_registration_path, class: "text-white" %>
-          </li>
-          <li class="nav-item marg">
-            <%= link_to 'Sign Out',destroy_user_session_path, method: :delete %>
-          </li>
-          
+          <span class="navbar-text">
+            <%= link_to 'Sign Out',destroy_user_session_path, method: :delete, class: "text-white" %>
+          </span>
         <% else %>
-
-          <li class="nav-item marg">
-            <%= link_to 'Register',new_user_registration_path, class: "text-white" %>
-          </li>
-          <li class="nav-item marg">
-            <%= link_to 'Sign In',new_user_session_path, class: "text-white" %>
-          </li>
-
+            <span class="navbar-text">
+            <%= link_to 'Register',new_user_registration_path %>
+            <%= link_to 'Sign In',new_user_session_path %>
+          </span>
         <% end %>
-        
-      </ul>
-    </nav>    
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-        <%= yield %>
+      </div>
+    </nav>
+     
+    <div align="center">
+      <% if notice %>
+        <p class="alert alert-success"><%= notice %></p>
+      <% end %>
+      <% if alert %>
+        <p class="alert alert-danger"><%= alert %></p>
+      <% end %>    
+    </div>
+    
+    <%= yield %>
     
   </body>
 </html>
+
