--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -10,13 +10,12 @@
       </ul>
     </div>
   <% end %>
-
+<div class="form-group">
   <div class="field">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, class: 'form-control' %>
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
+    <br>
+    <%= form.submit class: 'btn btn-success' %>
   </div>
 <% end %>
