--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Organization</h1>
+<div class="container" style="margin-top: 30px;">
+  <div class="page-header">
+    <h1>Edit Organisation</h1>
+    
+  </div>
+</div>
 
+<div class="container">
 <%= render 'form', organization: @organization %>
 
 <%= link_to 'Show', @organization %> |
 <%= link_to 'Back', organizations_path %>
+</div>
