--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,12 +1,10 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Organizations</h1>
 
-<table>
-  <thead>
+<table class="table table-stripped">
+  <thead class="thead-light">
     <tr>
       <th>Name</th>
-      <th colspan="3"></th>
+      <th colspan="3">Action</th>
     </tr>
   </thead>
 
@@ -17,8 +15,8 @@
 
         <td><%= link_to 'Show', organization %></td>
         
-          <td><%= link_to 'Edit', edit_organization_path(organization) %></td>
-          <td><%= link_to 'Destroy', organization, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Edit', edit_organization_path(organization), :class => 'btn btn-mini' %></td>
+          <td><%= link_to 'Destroy', organization, method: :delete, data: { confirm: 'Are you sure?'}, :class => 'btn btn-mini btn-danger'  %></td>
         
       </tr>
     <% end %>
@@ -26,4 +24,4 @@
 </table>
 
 <br>
-  <%= link_to 'New Organization', new_organization_path %>
+  <%= link_to 'New Organization', new_organization_path, :class => 'btn btn-primary' %>
