--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,9 +1,18 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @organization.name %>
-</p>
-
-<%= link_to 'Edit', edit_organization_path(@organization) %> |
+<div class="container">
+  <div class="jumbotron">
+    <h1><%= @organization.name %></h1>
+    <span class="label label-primary"> Last update <%= @organization.updated_at.strftime("%b %d, %Y") %></span>
+  </div>
+</div>
+<div class="container">
+  <div class="panel panel-default">
+    <div class="panel-footer">By <%=  current_admin.email %></div><br>
+    <%= link_to 'Edit', edit_organization_path(@organization) %> |
 <%= link_to 'Back', organizations_path %>
+
+  </div>
+</div>
+
+
+
+
