--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Project</h1>
+<div class="container" style="margin-top: 30px;">
+  <div class="page-header">
+    <h1>Edit Project</h1>
+    
+  </div>
+</div>
 
+<div class="container">
 <%= render 'form', project: @project %>
 
 <%= link_to 'Show', @project %> |
 <%= link_to 'Back', projects_path %>
+</div>
