--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Project</h1>
+<div class="container" style="margin-top: 30px;">
+  <div class="page-header">
+    <h1>New Project</h1>
+    
+  </div>
+</div>
 
+<div class="container">
 <%= render 'form', project: @project %>
-
+<br>
+<%= link_to 'Show', @project %> |
 <%= link_to 'Back', projects_path %>
+</div>
