--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -10,23 +10,24 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :task_title %>
-    <%= form.text_field :task_title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :task_description %>
-    <%= form.text_area :task_description %>
-  </div>
+<div class="form-group">
   
-  <div class="field">
+    <%= form.label :task_title %>
+    <%= form.text_field :task_title, class: 'form-control' %><br>
+  
+
+  
+    <%= form.label :task_description %>
+    <%= form.text_area :task_description, class: 'form-control' %><br>
+ 
+  
+  
     <%= form.label :project %>
-    <%= collection_select(:projects, :id, Project.where(user_id: current_user.id), :id, :title, {:multiple => true}) %>
-  </div>
+    <%= collection_select(:projects, :id, Project.where(user_id: current_user.id), :id, :title, {:multiple => true}, class: 'form-control') %><br>
+  
   
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: 'btn btn-success' %>
   </div>
 <% end %>
+</div>
