--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Task</h1>
+<div class="container" style="margin-top: 30px;">
+  <div class="page-header">
+    <h1>Edit Task</h1>
+    
+  </div>
+</div>
 
+<div class="container">
 <%= render 'form', task: @task %>
 
 <%= link_to 'Show', @task %> |
 <%= link_to 'Back', tasks_path %>
+</div>
