--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Task</h1>
+<div class="container" style="margin-top: 30px;">
+  <div class="page-header">
+    <h1>New Task</h1>
+    
+  </div>
+</div>
 
+<div class="container">
 <%= render 'form', task: @task %>
-
+<br>
+<%= link_to 'Show', @task %> |
 <%= link_to 'Back', tasks_path %>
+</div>
