--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,26 @@
 <% if current_user %>
+<div class="row">
+  <div class="col-md-9">
+    <ul id="conversations-list">
+      <% @conversations.each do |conversation| %>
+        <%= render 'conversations/conversation', conversation: conversation, user: current_user %>
+      <% end %>
+    </ul>
+  </div>
 
-	<% @organizations.each do |organization| %>
-		<% @users.each do |user| %>
-			<% if user.id == current_user.id %>
-				<% if user.organization_id == organization.id %>
-					<b>Organization: </b><%= organization.name %> 
-				<% end %>
-			<% end %>
-		<% end %>
-	<% end %> 
-	
-<% else %>
-
-	<h1>Welcome</h1>
-	
-
+  <div class="col-md-3">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">User list</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+          <% @users.each do |user| %>
+            <li><%= link_to user.email, conversations_path(user_id: user), remote: true, method: :post %></li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
 <% end %>
